# ExpectedInformationMaximization

./: .gitignore  README.md  req.txt
CppEIM/: .gitignore  CMakeLists.txt  setup.py
CppEIM/include/: MathUtil.h  NlOptUtil.h  PyArmaConverter.h
CppEIM/include/distributions/: Categorical.h  GMM.h  Gaussian.h
CppEIM/include/itps/: MoreGaussian.h  RepsCategorical.h
CppEIM/include/model_lerner/: GMMLearner.h
CppEIM/include/regression/: Regression.h
CppEIM/src/distributions/: Categorical.cpp  GMM.cpp  Gaussian.cpp  PyDistributions.cpp
CppEIM/src/itps/: MoreGaussian.cpp  RepsCategorical.cpp
CppEIM/src/model_learner/: GMMLearner.cpp  PyModelLearner.cpp
CppEIM/src/regression/: PyRegression.cpp  Regression.cpp
EIM/: gmm_test_random.py  gmm_test_vis.py  obstacle_avoidance.py  traffic_predicition.py
EIM/data/: ObstacleData.py  RandomGMMData.py  TrafficData.py
EIM/distributions/: ConditionalGaussian.py  GaussianEMM.py  SaveAndLoad.py  Softmax.py  __init__.py
EIM/distributions/conditional/: GaussianEMM.py
EIM/distributions/marginal/: Categorical.py  GMM.py  Gaussian.py
EIM/eim/: ConditionalMixtureEIM.py  DensityRatioEstimator.py  MarginalMixtureEIM.py
EIM/itps/: ITPS.py  MoreGaussian.py  RepsCategorical.py
EIM/recording/: Recorder.py
EIM/recording/modules/: DREModules.py  ModelModules.py  SimpleModules.py  UpdateModules.py
EIM/util/: ConfigDict.py  ModelInit.py  NetworkBuilder.py  Regression.py
